--- a/food.html
+++ b/food.html
@@ -156,7 +156,6 @@
     }
     
     body {
-        background-color: rgba(247, 237, 205, 0.13);
         background-image: url('bookPage.jpg');
         background-position-x: 300px;
         background-position-y: 100px;
@@ -168,6 +167,7 @@
         height: 60px;
         width: 60px;
         border-radius: 20px;
+       padding-top: 15px;
         
     }
     #dog {
